--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "browserify": "^9.0.8",
     "gulp": "^3.8.11",
     "http-server": "^0.8.0",
+    "jest-cli": "^0.4.0",
     "react-tools": "^0.13.1",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "react": "^0.13.1"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   }
 }
