--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "simple-timer",
   "version": "0.0.1",
   "description": "Simple Timer using React",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:suzuki/simple-timer.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
