--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "browserify": "^9.0.8",
     "gulp": "^3.8.11",
+    "gulp-jest": "^0.4.0",
+    "harmonize": "^1.4.1",
     "http-server": "^0.8.0",
     "jest-cli": "^0.4.0",
     "react-tools": "^0.13.1",
